--- a/trunk/ClubStarterKit.Web/ClubStarterKit.Web.csproj
+++ b/trunk/ClubStarterKit.Web/ClubStarterKit.Web.csproj
@@ -18,6 +18,7 @@
     </FileUpgradeFlags>
     <OldToolsVersion>4.0</OldToolsVersion>
     <UpgradeBackupLocation />
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -56,10 +57,6 @@
     </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\Dependencies\NHibernate\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Web.Mvc.Build, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files\Microsoft ASP.NET\ASP.NET MVC 2\Assemblies\Microsoft.Web.Mvc.Build.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=2.1.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
