--- a/trunk/ClubStarterKit.Web/ClubStarterKit.Web.csproj
+++ b/trunk/ClubStarterKit.Web/ClubStarterKit.Web.csproj
@@ -43,34 +43,16 @@
     <Reference Include="Accessibility">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="Antlr3.Runtime, Version=3.1.0.39271, Culture=neutral, PublicKeyToken=3a9cab8f8d22bfb7, processorArchitecture=MSIL">
+    <Reference Include="FluentNHibernate, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\NHibernate\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Core, Version=1.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\NHibernate\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.DynamicProxy2, Version=2.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\NHibernate\Castle.DynamicProxy2.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentNHibernate">
       <HintPath>..\Dependencies\NHibernate\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=2.1.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\NHibernate\NHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="NHibernate.ByteCode.Castle, Version=2.1.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+    <Reference Include="StructureMap, Version=2.5.3.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\NHibernate\NHibernate.ByteCode.Castle.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate.Linq, Version=1.0.0.4000, Culture=neutral, PublicKeyToken=444cf6a87fdab271, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\NHibernate\NHibernate.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="StructureMap">
       <HintPath>..\Dependencies\StructureMap\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -115,6 +97,10 @@
     <Content Include="Content\PageJavascript\PhotoAdmin.js" />
     <Content Include="Content\PageJavascript\PollAddAnswer.js" />
     <Compile Include="Controllers\MessageController.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Helpers\Routing\ErrorPageRouteRegistrant.cs" />
     <Compile Include="Helpers\Routing\ForumRouteRegistrant.cs" />
     <Compile Include="Helpers\Routing\PageRouteRegistrant.cs" />
@@ -221,9 +207,6 @@
     <Compile Include="ViewData\Membership\RegistrationViewData.cs" />
     <Compile Include="ViewData\Membership\SendEmailViewData.cs" />
     <Compile Include="ViewData\Poll\PollResults.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
     <Compile Include="Helpers\AsyncFormHelper.cs" />
     <Compile Include="Helpers\ConfirmationLink.cs" />
     <Compile Include="Helpers\GravatarHelper.cs" />
@@ -407,6 +390,22 @@
     <Folder Include="Content\Uploads\Photos\" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CodeTemplates\AddController\Controller.tt" />
+    <None Include="CodeTemplates\AddView\Create.tt" />
+    <None Include="CodeTemplates\AddView\Details.tt" />
+    <None Include="CodeTemplates\AddView\Edit.tt" />
+    <None Include="CodeTemplates\AddView\Empty.tt" />
+    <None Include="CodeTemplates\AddView\List.tt" />
+    <None Include="Infrastructure\T4MVC.settings.t4" />
+    <None Include="Infrastructure\T4MVC.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>T4MVC.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ClubStarterKit.Core\ClubStarterKit.Core.csproj">
       <Project>{E3787357-9DF8-4470-A931-1688C53EAB2E}</Project>
       <Name>ClubStarterKit.Core</Name>
@@ -423,22 +422,6 @@
       <Project>{0D986308-C406-459A-A43C-5B5C92CE01E2}</Project>
       <Name>ClubStarterKit.Infrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CodeTemplates\AddController\Controller.tt" />
-    <None Include="CodeTemplates\AddView\Create.tt" />
-    <None Include="CodeTemplates\AddView\Details.tt" />
-    <None Include="CodeTemplates\AddView\Edit.tt" />
-    <None Include="CodeTemplates\AddView\Empty.tt" />
-    <None Include="CodeTemplates\AddView\List.tt" />
-    <None Include="Infrastructure\T4MVC.settings.t4" />
-    <None Include="Infrastructure\T4MVC.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>T4MVC.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
