--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
 
-
 #################
 ## Visual Studio
 #################
@@ -69,7 +68,9 @@ DocProject/Help/html
 publish
 
 # Others
-[Bb]in
+src/*/[Bb]in
+src/*/*/[Bb]in
+src/*/*/*/[Bb]in
 [Oo]bj
 sql
 TestResults
